# macro-mancer

./: .editorconfig  .env  .env.example  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  pyproject.toml  research.ipynb  research.py
src/: __init__.py
src/agents/: __init__.py  agent.py  deployment.py  prompt.py  tools.py
src/agents/eval/: basic_eval.json
src/agents/eval_tests/: test_agent.py
src/application/: __init__.py
src/application/services/: __init__.py  analysis_service.py
src/domain/: __init__.py  entities.py  repositories.py
src/infrastructure/: __init__.py  container.py
src/infrastructure/database/: __init__.py  config.py  models.py
src/infrastructure/repositories/: __init__.py  impact_analysis_repository.py
terraform/environments/dev/: .terraform.lock.hcl  main.tf  variables.tf
terraform/modules/cloud_sql/: main.tf  variables.tf
tests/: conftest.py
tests/agents/: test_impact_calculator.py  test_news_analyzer_agent.py
