[project]
name = "macro-mancer"
version = "0.1.0"
description = "Macroeconomic news analysis system using ADK agents"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "feedparser>=6.0.10",
    "python-dotenv>=1.0.0",
    "google-adk[eval]>=1.4.2",
    "litellm>=1.72.9",
    "ollama>=0.5.1",
    "httpx>=0.28.1",
    "pandas",
    "joblib"
]
requires-python = ">=3.12"

