[project]
name = "macro-mancer"
version = "0.1.0"
description = "Macroeconomic news analysis system using ADK agents"
authors = [
    {name = "Marija Grozdanic"},
    {name = "Peter Kiss"}
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "feedparser>=6.0.10",
    "python-dotenv>=1.0.0",
    "google-adk[eval]>=1.4.2",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "joblib>=1.4.2",
    "newspaper3k>=0.2.8",
    "litellm>=1.73.0",
]
requires-python = ">=3.12"

